welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:3: error: reassignment to val
 while(estSurBiscuit = false){
                     ^SlugTracking:3: error: type mismatch;
 found   : Unit
 required: Boolean
 while(estSurBiscuit = false){
 ^